Adding Android development to image